@@ -1,4 +1,4 @@
-$Id: History,v 1.35 2001-11-08 13:36:03 gcosmo Exp $
+$Id: History,v 1.36 2001-11-10 07:51:24 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,8 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Nov.10, 01 
+- Fixed bugs in assignment operators in G4Track
 
 Nov. 08, 01  G.Cosmo (track-V03-02-05)
 - Merge changes included in "track-V03-02-02a".
